--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic~=2.11",
     "fastapi~=0.109",
     "uvicorn~=0.27",
-    "httpx~=0.25"
+    "httpx~=0.25",
+    "psutil~=5.9"
 ]
 
 [project.optional-dependencies]
