--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "tvmux"
 description = "terminal multiplexer recorder"
-version = "0.4.0"
+version = "0.4.1"
 authors = [
     { name = "Gareth Davidson", email = "gaz@bitplane.net" }
 ]
@@ -15,7 +15,8 @@ dependencies = [
     "uvicorn~=0.27",
     "httpx~=0.25",
     "psutil~=5.9",
-    "asciinema"
+    "asciinema~=2.4",
+    "requests>=2.0"
 ]
 
 [project.optional-dependencies]
